# sessions-rs

./: .gitignore  Cargo.toml  README.md  build.py  install.py  justfile  sessions.toml.example
.github/skips/: SKIP_SYSTEM.md
.github/workflows/: cleanup-logs.yml  update-readme.yml
.github/workflows/scripts/: ci-lines.sh  cleanup_logs.py  update_readme.py
src/: color.rs  config.rs  main.rs  toml_parser.rs
sys/rust/: audit.py  check.py  clean.py  clippy.py  rustfmt.py  test_rust.py
sys/theme/: theme.py
sys/utils/: fix_nerdfonts.py  lines.py  precommit.py  remove_emojis.py  venv.py
